# nl2sql_langchain

./: .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
scripts/: init_database.py
